[package]
name = "span"
version = "0.0.1"
edition = "2021"
authors = ["Sol Midnight <sol.midnight@blockglow.com>"]
description = "Networking crate implementing RAFT-Plus, MLRaft, and potentially hhRaft? hmm..."
repository = "https://github.com/midnightquark/trader"
license = "MIT"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
hashbrown = "0.14.5"
uuid = { version = "1.8.0", features = ["v4", "v5", "serde"] }
derive_more = "0.99.18"
bimap = "0.6.3"
quinn = "0.11.2"
rcgen = "0.13.1"
rustls = { version = "0.23.10", default-features = false, features = ["ring"] }
bincode = "1.3.3"
tracing = "0.1.40"
serde_bytes = "0.11.14"
serde_millis = "0.1.1"
ordered-float = { version = "4.2.0", features = ["serde"] }
sysinfo = "0.30.12"
left-right = "0.11.5"